# financas-pessoais

backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/routers/: auth.py  categorias.py  transacoes.py  usuarios.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth.py  test_transacoes.py  test_usuarios.py
frontend/src/: App.jsx  index.css
frontend/src/components/: Card.jsx  FormTransacao.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx
